fix(admin-theme): remove dark mode for now

--- a/web/themes/custom/ys_admin_theme/scss/gin-custom.scss
+++ b/web/themes/custom/ys_admin_theme/scss/gin-custom.scss
@@ -197,146 +197,9 @@ tbody .views-field:not(.views-field-operations) a {
   max-width: 1200px;
 }
 
-// Dark Mode
-.gin--dark-mode .gin-layer-wrapper,
-.gin--dark-mode .gin-layer-wrapper-shadow,
-.gin--dark-mode .block-system > form,
-.gin--dark-mode .views-exposed-form.views-exposed-form,
-.gin--dark-mode .views-edit-view,
-.gin--dark-mode .views-preview-wrapper,
-.gin--dark-mode .modules-tabs,
-.gin--dark-mode .module-filter-update-status-form .table-filter,
-.gin--dark-mode #views-entity-list,
-.gin--dark-mode .admin.my-workbench {
-  background-color: var(--wool);
-  box-shadow: none !important;
-}
-
-.gin--dark-mode .fieldset__label,
-.fieldset__label--group,
-.form-item__label {
-  font-weight: var(--gin-font-weight-normal) !important;
-  --gin-color-title: var(--darkest-gray);
-}
-
-.gin--dark-mode .form-element--type-select {
-  --gin-bg-input:var(--darkest-gray);
-}
-
-.gin--dark-mode [data-drupal-selector="edit-enable-darkmode"] .form-radios .form-item__label {
-  --gin-color-title: var(--wool);
-}
-
-.gin--dark-mode .button,
-.gin--dark-mode .button:not(:focus),
-.gin--dark-mode .form-actions .button,
-.gin--dark-mode .action-link--icon-trash.action-link {
-  box-shadow: none !important;
-}
-
-.gin--dark-mode
-  .button.form-submit:not(:focus):not(:hover):not(.button--primary) {
-  background-color: transparent !important;
-}
-
-.gin--dark-mode .button--primary,
-.gin--dark-mode .button--primary:not(:focus) {
-  background: var(--gin-color-primary-active) !important;
-  color: var(--gin-color-button-text) !important;
-}
-
-.gin--dark-mode .button--primary:focus,
-.gin--dark-mode .button--primary:hover {
-  background: var(--gin-color-primary-light) !important;
-  color: var(--gin-color-button-text-hover) !important;
-}
-
-.gin--dark-mode table tr,
-table .draggable-table.tabledrag-disabled tr,
-.gin--dark-mode table th {
-  color: var(--darkest-gray) !important;
-}
-
-.gin--dark-mode table th,
-.gin--dark-mode table.sticky-header::before,
-.gin--dark-mode table.sticky-header::after {
-  background: var(--wool) !important;
-}
-
-.gin--dark-mode .tabs-wrapper--secondary .tabs__link.is-active::before {
-  border-color: var(--gin-color-primary-light) !important;
-}
-
-.gin--dark-mode .tabs__link.is-active {
-  background: var(--gin-color-primary-light);
-}
-
-.gin--dark-mode
-  .gin-secondary-toolbar
-  .toolbar-secondary
-  .toolbar-bar
-  .toolbar-tab
-  .toolbar-tray
-  a {
-  color: var(--light-gray) !important;
-}
-
-.gin--dark-mode
-  :not(.form-checkboxes):not(td):not(
-    .media-library-item__click-to-select-checkbox
-  ):not(.field-content)
-  > .form-type--checkbox
-  label {
-    --gin-color-text: var(--darkest-gray);
-  }
-
-.gin--dark-mode .media-library-widget-empty-text,
-.gin--dark-mode
-  .layout-region-node-secondary
-  :not(.form-checkboxes):not(td):not(
-    .media-library-item__click-to-select-checkbox
-  ):not(.field-content)
-  > .form-type--checkbox
-  label {
-  color: var(--darkest-gray) !important;
-}
-
-.gin--dark-mode
-  .layout-region-node-secondary
-  :not(.form-checkboxes):not(td):not(
-    .media-library-item__click-to-select-checkbox
-  ):not(.field-content)
-  > .form-type--checkbox
-  .checkbox-toggle__inner {
-  background-color: #1f1f1f !important;
-}
-
-.gin--dark-mode .panel__content .admin-item__title,
-.gin--dark-mode .panel__content .admin-item__description {
-  color: var(--gin-color-primary-active) !important;
-}
-
-.gin--dark-mode .meta-sidebar__trigger.is-active,
-.gin--dark-mode .meta-sidebar__close.is-active {
-  background-color: var(--gin-color-primary-light) !important;
-}
-
-.gin--dark-mode .claro-details__summary, 
-.gin--dark-mode .claro-details__summary.claro-details__summary--package-listing, 
-.gin--dark-mode .claro-details__summary.claro-details__summary--system-status-report {
-  --gin-color-text: var(--darkest-gray);
-}
-
-.gin--dark-mode .form-item__description, 
-.gin--dark-mode .fieldset__description {
-  --gin-color-text-light: var(--darkest-gray);
-}
-
 .js .dropbutton-widget {
   background-color: transparent;
 }
 
-.gin--dark-mode .contextual .trigger::before {
-  background: var(--gin-color-primary-light);
-}
+
 /* stylelint-enable */
